# travel-agent

./: .env.example  LICENSE  README.md  app.py  mutliagent.md  notebook.ipynb  pyproject.toml  requirements.txt  run_agent.py  setup.py  test.py  test_complex_queries.py  test_multi_agent.py
.history/: .gitignore_20250813215920
.history/agent/: tools_20250809125438.py  tools_20250813205527.py  tools_20250813205532.py  tools_20250813205543.py  tools_20250813205556.py  tools_20250813205557.py  tools_20250813205610.py  tools_20250813205615.py  tools_20250813205618.py  tools_20250813205634.py  tools_20250813205649.py  tools_20250813205701.py  tools_20250813205703.py  tools_20250813205704.py  tools_20250813205709.py  tools_20250813220218.py  tools_20250813220330.py
agent/: __init__.py  agent.py  coordinator.py  multi_agent.py  prompt.txt  tools.py  tracer.py
