[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-agent"
version = "0.1.0"
description = "A travel planning agent using OpenAI and Pydantic AI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic-ai",
    "python-dotenv",
    "logfire",
    "langchain_google_community",
    "googlemaps",
    "load_dotenv",]

[project.urls]
Homepage = "https://github.com/yourusername/travel-agent"
Issues = "https://github.com/yourusername/travel-agent/issues"